[metadata]
name = rfatrack
version = 0.1.0
author = Keyfox
author_email = dev.keyfox@gmail.com
description = Ring Fit Adventure tweets tracker
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keyfox/rfatrack

[options]
packages = find:
python_requires = ~=3.7
install_requires =
  requests==2.*
  rfaparse
  python-dotenv==0.15.*
  tweepy==3.*

[options.entry_points]
console_scripts =
  rfatrack = rfatrack.__main__:main
